  java.rmi.server.randomIDs=true and java.rmi.server.useCodebaseOnly=true added to server config files
  Tentative fixing of the column movement bug
  DefaultEntityEditModel now refreshes data bound combo box models when they are created
  Property.isReference() removed, instanceof Property.ForeignKeyProperty used instead
  EntityTablePanel does not add the search panel to the search panel scroll panel on initialization anymore
  AbstractFilteredTablePanel, fixed bug causing selection to be cleared during refresh, evtSortingDone was being fired without a previous evtSortingStarted firing
  Cascade refresh functionality removed
  Removed unused images
  Refactored event bindings between DefaultEntityModel, DefaultEntityEditModel and DefaultEntityTableModel with relation to sorting and repeated detail model refreshing
  ServerUtilTest added
  RemoteServer refactorings
  EntityDefinition.isRowColoring field removed
  EntityDefinition.isRowColoring() renamed to hasBackgroundColorProvider(), renaming bubbled all the way up
  QueryLoadTestModel improved
  EntityDbRemoteTest added
  EntityModel.stActive moved to it's logical home, EntityEditPanel
  EntityTableColumnModel removed along with default implementation
  EntityEditModel insert/update/delete now return the affected entities/keys
  EntityUiUtil.NewRecordAction renamed to NewEntityAction, now uses a single EntityEditPanel instead of a whole EntityPanel
  LoginPanel.addInitialFocusHack() moved to UiUtil, action parameter added
  EntityPanelProvider.createInstance() renamed to createPanel()
  EntityPanelProvider.createEditPanel() and createTablePanel() added
  Minor improvements, mostly javadoc errors
  LoadTestModel, nanoTime() used for measurements
  MethodLogger, nanotime() used for measurements
  EntityCriteriaUtil.PropertyCriteria refactored
  EntityTableModel.isMultipleUpdateAllowed() renamed to isBatchUpdateAllowed()
  EntityTableModel.getAllowDeleteState() renamed to getDeleteAllowedState()