@@ -27,7 +27,7 @@
     <property name="jminor.client.connectionType" value="remote"/>
     <property name="javax.net.ssl.trustStore" value="JMinorClientTruststore"/>
     <property name="jminor.server.hostname" value="97.107.136.43" />
-    <property name="jminor.report.path" value="http://jminor.no-ip.org/webstart/demos/reports/" />
+    <property name="jminor.report.path" value="reports/demos" />
   </resources>
 
   <application-desc main-class="org.jminor.framework.demos.chinook.client.ui.ChinookAppPanel"/>
