@@ -1,3 +1,4 @@
 jminor.client.connectionType=remote
+jminor.report.path=reports/demos
 jminor.server.hostname=localhost
 javax.net.ssl.trustStore=config/JMinorClientTruststore
