@@ -26,7 +26,7 @@
     <property name="jminor.client.connectionType" value="remote"/>
     <property name="javax.net.ssl.trustStore" value="JMinorClientTruststore"/>
     <property name="jminor.server.hostname" value="97.107.136.43" />
-    <property name="jminor.report.path" value="http://jminor.no-ip.org/webstart/webstart/reports/" />
+    <property name="jminor.report.path" value="reports/demos" />
   </resources>
 
   <applet-desc
